Fri Aug  8 17:19:57 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/open-uri.rb: remove needless condition for old ruby version.
	* test/open-uri/test_open-uri.rb: ditto.

Fri Aug  8 16:40:59 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/irb/init.rb: removed unreachable code.

Fri Aug  8 16:34:22 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/drb/drb.rb: removed unreachable code.

Fri Aug  8 14:33:49 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/webrick/httpproxy.rb: remove needless condition
	  for old ruby version.

Fri Aug  8 01:07:10 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): fix invalid char in eval, should raise
	  an syntax error too, as well as directly coded.
	  [ruby-core:64243] [Bug #10117]

Thu Aug  7 23:25:29 2014  Masaki Matsushita <glass.saga@gmail.com>

	* lib/open3.rb: avoid unnecessary write if stdin_data is empty.

Thu Aug  7 21:42:49 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_typelib.c (foletypelib_version): return
	  version string.

	* test/win32ole/test_win32ole_typelib.rb (test_version): ditto.

Thu Aug  7 15:13:13 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/cgi.rb: remove needless condition for old ruby version.

Thu Aug  7 06:04:49 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yyerror): preserve source code encoding in
	  syntax error messages.  [ruby-core:64228] [Bug #10114]

Wed Aug  6 20:56:02 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: separate src of WIN32OLE_TYPELIB from
	  win32ole.c

	* ext/win32ole/win32ole.h: ditto.
	* ext/win32ole/win32ole_typelib.c: ditto.
	* ext/win32ole/win32ole_typelib.h: ditto.
	* ext/win32ole/depend: ditto.

Wed Aug  6 20:44:07 2014  Akinori MUSHA  <knu@iDaemons.org>

	* enum.c (enum_one): [DOC] Move enum.one? documentation before the
	  relevant method.  Submitted by @vipulnsward. [Fixes GH-687]