@@ -1,3 +1,9 @@
+Fri Aug  8 01:53:37 2014  Masaki Matsushita <glass.saga@gmail.com>
+
+	* lib/securerandom.rb: use OpenSSL::BN for performance improvement.
+
+	* benchmark/bm_securerandom.rb: benchmark script.
+
 Fri Aug  8 17:19:57 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
 
 	* lib/open-uri.rb: remove needless condition for old ruby version.
